--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,13 +17,16 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
+          
+      - name: MySQL 실행
+        run: docker-compose up -d
 
       - name: gradlew 파일에 실행 권한 부여
         run: chmod +x ./gradlew
         working-directory: ./written-me
 
       - name: 테스트 및 빌드하기
-        run: ./gradlew clean build
+        run: ./gradlew clean build -Plocal
         working-directory: ./written-me
         env:
           DB_URL: ${{ secrets.DB_URL }}
@@ -61,5 +64,5 @@ jobs:
             mv /home/ubuntu/written-server/tobe/project.jar /home/ubuntu/written-server/current/project.jar
             cd /home/ubuntu/written-server/current
             sudo fuser -k -n tcp 8080 || true
-            nohup java -jar project.jar --spring.profiles.active=prod > ./output.log 2>&1 &
+            nohup java -jar project.jar > ./output.log 2>&1 &
             rm -rf /home/ubuntu/written-server/tobe
