--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,8 +40,12 @@ jobs:
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
 
+      - name: 빌드 결과물 출력하기
+        run: ls -al
+
       - name: 빌드된 파일 이름 변경하기
         run: mv ./build/libs/*SNAPSHOT.jar ./project.jar
+        working-directory: ./written-me
 
       - name: SCP로 EC2에 빌드된 파일 전송하기
         uses: appleboy/scp-action@v0.1.7
