--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -69,5 +69,5 @@ jobs:
             mv /home/ubuntu/written-server/tobe/written-me/project.jar /home/ubuntu/written-server/current/project.jar
             cd /home/ubuntu/written-server/current
             sudo fuser -k -n tcp 8080 || true
-            nohup java -jar project.jar > ./output.log 2>&1 &
+            nohup java -jar project.jar --spring.profiles.active=prod > ./output.log 2>&1 &
             rm -rf /home/ubuntu/written-server/tobe/written-me
