--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -69,5 +69,14 @@ jobs:
             mv /home/ubuntu/written-server/tobe/written-me/project.jar /home/ubuntu/written-server/current/project.jar
             cd /home/ubuntu/written-server/current
             sudo fuser -k -n tcp 8080 || true
+            export DB_URL=${{ secrets.DB_URL }}
+            export DB_USER=${{ secrets.DB_USER }}
+            export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            export REDIS_HOST=${{ secrets.REDIS_HOST }}
+            export REDIS_PASSWORD=${{ secrets.REDIS_PORT }}
+            export OPEN_API_KEY=${{ secrets.OPEN_API_KEY }}
+            export BUCKET_NAME=${{ secrets.BUCKET_NAME }}
+            export ACCESS_KEY=${{ secrets.ACCESS_KEY }}
+            export SECRET_KEY=${{ secrets.SECRET_KEY }}
             nohup java -jar project.jar --spring.profiles.active=prod > ./output.log 2>&1 &
             rm -rf /home/ubuntu/written-server/tobe/written-me
